Remove GET /api/engine-configuration and add /api/version to replace it
