# brainframe_qt/api/codecs/__init__.py
@@ -2,7 +2,7 @@ from .base_codecs import Codec
 
 from .alarm_codecs import Alert, ZoneAlarm
 from .condition_codecs import ZoneAlarmCountCondition, ZoneAlarmRateCondition
-from .config_codecs import EngineConfiguration, StreamConfiguration
+from .config_codecs import StreamConfiguration
 from .detection_codecs import Attribute, Detection, Identity
 from .zone_codecs import Zone, ZoneAlarm, ZoneStatus
 from .plugin_codecs import PluginOption, Plugin, NodeDescription
